desktop_style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
}

@media (min-width: 768px) {
  .mobile {
    display: none;
  }

  button:hover {
    cursor: pointer;
    background: #6070ff;
  }

  button:active {
    background: #2230d2;
    transform: translateY(4px);
  }

  button:disabled {
    background: #e5e5e5;
  }

  main {
    background: #e5e5e5;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto auto auto;
  }

  .intro_page {
    background: #fff;
  }

  .navbar {
    display: flex;
    height: 72px;
    padding: 26px 10.763vw 26px 10.763vw;
    align-items: center;
    justify-content: space-between;
  }

  nav {
    display: none;
  }

  header a {
    text-decoration: none;
    font-weight: 700;
    font-size: 18px;
    line-height: 20px;
    color: #6070ff;
  }

  .menu_bar {
    display: flex;
    column-gap: 2.222vw;
  }

  .menu_bar li {
    list-style: none;
    font-weight: 500;
    font-size: 15px;
    line-height: 20px;
    color: #344563;
  }

  .background_content {
    display: flex;
    justify-content: center;
    margin-top: 46px;
    background-image: url(./images/Header.svg);
    background-repeat: no-repeat;
    background-size: cover;
    height: 721.46px;
  }

  .content {
    width: 63.888vw;
  }

  .content h1 {
    padding-top: 241px;
    font-weight: 700;
    font-size: 49px;
    line-height: 52px;
    color: #091e42;
    font-style: normal;
  }

  .content p {
    margin-top: 12px;
    margin-bottom: 12px;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: #344563;
  }

  .content h2 a {
    text-decoration: none;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    color: #7f8cff;
  }

  .social-media-icons {
    margin-top: 12px;
    display: flex;
    column-gap: 1.388vw;
    align-items: center;
  }

  .social-media-icons li {
    list-style: none;
  }

  .Works_Section {
    width: 100vw;
    background: #fff;
    display: grid;
    grid-template-columns: 80%;
    grid-template-rows: 24% 24% 24% 24%;
  }

  .card {
    display: flex;
    margin-left: 11.52vw;
    margin-right: 11.52vw;
    width: 80.277vw;
    column-gap: 1.527vw;
    height: 496px;
    margin-bottom: 142px;
    background: #fff;
    border: 1px solid #dfe1e6;
    border-radius: 24px;
    padding-left: 1.5vw;
    padding-right: 1.5vw;
  }

  .card_2 img {
    order: 2;
  }

  .card_4 img {
    order: 2;
  }

  .card img {
    margin-bottom: 24px;
    margin-top: 24px;
    width: 37.777vw;
    height: 448px;
  }

  .card img:hover {
    transform: scale(1.02);
  }

  .card h2 {
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #091e42;
    margin-bottom: 12px;
  }

  .frame ul {
    display: flex;
    column-gap: 0.833vw;
    align-items: center;
    margin-bottom: 12px;
  }

  .frame li {
    list-style: none;
    font-weight: 400;
    font-size: 18px;
    line-height: 24px;
    color: #6b778c;
  }

  .separator {
    width: 6px;
    height: 6px;
    border-radius: 16px;
    background-color: #c1c7d0;
  }

  .frame .canopy {
    list-style: none;
    font-weight: 500;
    font-size: 18px;
    line-height: 24px;
    color: #344563;
  }

  .card p {
    font-weight: 400;
    font-size: 15px;
    line-height: 24px;
    color: #344563;
    margin-bottom: 12px;
  }

  .categories li {
    list-style: none;
  }

  .tags ul {
    display: flex;
    column-gap: 1.388vw;
    margin-bottom: 12px;
  }

  .tags ul li {
    list-style: none;
    margin-top: 0;
    padding-top: 0;
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    letter-spacing: 0.03em;
    color: #6070ff;
  }

  .tags button {
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    letter-spacing: 0.03em;
    color: #6070ff;
    border-radius: 8px;
    background: #ebebff;
    border: none;
    padding: 8px 15px 8px 15px;
  }

  .see_project_button button {
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    letter-spacing: 0.03em;
    color: #396df2;
    padding: 12px;
    border: 1px solid #6070ff;
    border-radius: 8px;
  }

  .work_cards {
    width: 37.777vw;
    padding-top: 48px;
    padding-right: 1.666vw;
    padding-left: 1.666vw;
  }

  .content_2 {
    display: flex;
    flex-direction: row;
    background-color: #fff;
  }

  .content_2 h2 {
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #172b4d;
  }

  .content_2 p {
    padding-top: 12px;
    padding-bottom: 12px;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: #344563;
  }

  .content_2 h2 a {
    text-decoration: none;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    color: #7f8cff;
  }

  .split {
    width: 31.041vw;
    height: 392px;
    margin-left: 9.861vw;
    background-color: #fff;
  }

  .split ul li {
    list-style: none;
  }

  .social-media-icons_2 {
    padding-right: 6.6vw;
    padding-top: 12px;
    display: flex;
    align-items: center;
    column-gap: 1.38vw;
  }

  .under_languages {
    display: flex;
    column-gap: 1.11vw;
  }

  .box {
    display: flex;
    flex-direction: column;
    background: #f7f7f9;
    align-items: flex-start;
    row-gap: 16px;
    width: 8.472vw;
  }

  .box p {
    font-weight: 500;
    font-size: 15px;
    line-height: 20px;
    color: #253858;
  }

  .resume_button button {
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    letter-spacing: 0.03em;
    color: #396df2;
    margin-top: 12px;
    border: 1px solid #6070ff;
    border-radius: 8px;
    width: 162px;
    height: 48px;
  }

  .categories {
    width: 47.5vw;
    height: 360px;
    margin-right: 9.861vw;
    padding-left: 1.666vw;
    background-color: #fff;
    padding-right: 2.91vw;
    padding-top: 24px;
  }

  .categories ul li {
    display: flex;
    justify-content: space-between;
    font-weight: 500;
    font-size: 20px;
    line-height: 24px;
    padding-bottom: 23px;
    align-items: center;
    color: #344563;
  }

  .arrow {
    background-color: transparent;
    border: none;
    border-radius: 40px;
    width: 20px;
    height: 20px;
  }

  .contact_form {
    margin-top: 150px;
  }

  .background {
    padding-top: 79.09px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 134px;
    height: 779px;
    background: #6070ff;
    background-size: cover;
    background-image: url(./images/contact_form_background_shapes_desktop.svg);
    border-top-left-radius: 60px;
    background-repeat: no-repeat;
  }

  .background h2 {
    text-align: center;
    padding-top: 92px;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #fff;
    margin-bottom: 12px;
  }

  .background p {
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
    color: #ebebff;
    text-align: center;
    margin: 0 24px 24px 24px;
    width: 39.513vw;
  }

  form {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .field {
    background: #fff;
    border: 1px solid #cfd8dc;
    padding: 15px 16px 15px 16px;
    font-weight: 400;
    font-size: 17px;
    line-height: 20px;
    margin: 10px 24px 10px 24px;
    width: 31.041vw;
  }

  .field:hover {
    transform: translateX(10px);
  }

  .field3 {
    background: #fff;
    border: 1px solid #cfd8dc;
    padding: 15px 16px 15px 16px;
    font-weight: 400;
    font-size: 17px;
    line-height: 20px;
    margin: 10px 24px 5px 24px;
    width: 31.04vw;
    height: 170px;
  }

  .field3:hover {
    transform: translate(10px);
  }

  .background button {
    background: #fff;
    border-radius: 8px;
    padding: 12px 16px;
    margin-left: 24px;
    margin-top: 10px;
    border: none;
    letter-spacing: 0.03em;
    color: #6070ff;
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    width: 145px;
  }

  .home_indicator {
    display: none;
  }
}

